# proxilion-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  TEST_SUITE_ANALYSIS.md  pyproject.toml  spec.md
.codelicious/: STATE.md  cache.json  review_performance.json  review_qa.json  review_reliability.json  review_security.json  state.json
.github/workflows/: ci.yml
.proxilion-build/: STATE.md  progress.jsonl
docs/: concepts.md  quickstart.md  security.md
docs/features/: README.md  audit-logging.md  authorization.md  input-guards.md  observability.md  output-guards.md  rate-limiting.md  security-controls.md
docs/specs/: spec-v1.md  spec-v10.md  spec-v2.md  spec-v3.md  spec-v4.md  spec-v5.md  spec-v6.md  spec-v7.md  spec-v8.md  spec-v9.md
marketing-site/: grc.html  index.html  mcp.html
proxilion/: __init__.py  core.py  decorators.py  exceptions.py  types.py
proxilion/audit/: __init__.py  base_exporters.py  events.py  explainability.py  hash_chain.py  logger.py
proxilion/caching/: __init__.py  tool_cache.py
proxilion/context/: __init__.py  context_window.py  message_history.py  session.py
proxilion/contrib/: __init__.py  anthropic.py  google.py  langchain.py  mcp.py  openai.py
proxilion/engines/: __init__.py  base.py  casbin_engine.py  opa_engine.py  simple.py
tests/: __init__.py  conftest.py  test_audit.py  test_audit_extended.py  test_benchmarks.py  test_builtin_policies.py  test_caching.py  test_cascade_protection.py  test_cloud_exporters.py  test_compliance_exporters.py  test_context_window.py  test_core.py  test_cost_limiter.py  test_cost_tracker.py  test_decorator_combinations.py  test_decorators.py  test_edge_cases_spec.py  test_engines_mocked.py  test_exceptions.py  test_generators.py  test_google_integration.py  test_guard_bypass.py  test_guards.py  test_hash_chain_detailed.py  test_message_history.py  test_metrics.py  test_observability_hooks.py  test_pipeline_integration.py  test_policies.py  test_provider_adapters.py  test_providers.py  test_resilience.py  test_scheduling.py  test_scope_enforcer.py  test_security_regression.py  test_sequence_validator.py  test_session.py  test_session_cost_tracker.py  test_streaming.py  test_thread_safety.py  (+5 more)
(+84 files in other folders)
