[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proxilion"
version = "0.0.4"
description = "Application-layer security SDK for LLM tool call authorization"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Clay Good" }
]
keywords = [
    "llm",
    "security",
    "authorization",
    "ai",
    "agents",
    "tool-calling",
    "policy",
    "mcp",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
casbin = ["casbin>=1.0"]
opa = ["opa-python-client>=1.0"]
all = ["pydantic>=2.0", "casbin>=1.0", "opa-python-client>=1.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://proxilion.com"
Documentation = "https://proxilion.com"
Repository = "https://github.com/clay-good/proxilion-sdk"
Issues = "https://github.com/clay-good/proxilion-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["proxilion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = [
    "SIM102",  # nested if - often more readable
    "SIM103",  # return condition directly - preference
    "SIM108",  # ternary - preference
    "SIM115",  # context manager - classes manage file lifetime
    "N818",    # exception naming - would break API
    "B027",    # empty method in ABC - intentional optional override
]
